samples/_failures_safe/1761711032_c2a298_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d83bf427.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_d83bf427.c:178:17: error: expected declaration or statement at end of input
  178 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_d83bf427.c:178:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d83bf427.c:178:17: error: expected declaration or statement at end of input
